<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/quizLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:layout_marginBottom="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           android:text="@string/good"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="28dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/score"
            android:textSize="20sp"
            android:id="@+id/tv_scoreText"

            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/_0"
            android:textSize="20sp"
            android:id="@+id/tv_score"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/question"
        android:textSize="20sp"
        android:layout_marginBottom="40dp"
        android:id="@+id/question"
        />

       <Button
           android:layout_width="wrap_content"
           android:layout_height="30dp"
           android:text="@string/visitted"
           android:background="@color/colorAccent"
           android:textColor="@android:color/black"
           android:layout_marginStart="100dp"
           android:id="@+id/choice1"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/visited"
        android:background="@color/colorAccent"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="100dp"
        android:id="@+id/choice2"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/visiting"
        android:background="@color/colorAccent"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="100dp"
        android:id="@+id/choice3"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/visit"
        android:background="@color/colorAccent"
        android:textColor="@android:color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="100dp"
        android:id="@+id/choice4"/>

</LinearLayout>